--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@
     color: white;
 }
 
+main,
 header {
     max-width: 1280px;
     margin: auto;
@@ -57,7 +58,7 @@ header {
 }
 
 .banner-details h1 {
-    font-size: 52px;
+    font-size: 45px;
     font-weight: 700;
 }
 
@@ -74,4 +75,66 @@ header {
     /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.advertise {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    margin: 140px 0px;
+}
+
+.hide {
+    display: none;
+}
+
+
+.popular-container h2 {
+    text-align: center;
+    color: #3A3A3A;
+    font-weight: 600;
+    font-size: 28px;
+}
+
+@media screen and (max-width:576px) {
+    .nav {
+        flex-direction: column;
+    }
+
+    .nav-right-side ul {
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 20px;
+    }
+
+    .banner {
+        flex-direction: column-reverse;
+    }
+
+    .banner-details h1 {
+        text-align: center;
+    }
+
+    .test-btn {
+        margin-left: 150px;
+    }
+
+    .advertise {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:992px) {
+    .nav {
+        flex-direction: column;
+    }
+
+    .banner {
+        flex-direction: column-reverse;
+    }
+
+    .advertise {
+        flex-wrap: wrap;
+    }
 }
