--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,15 @@
     color: white;
 }
 
+.btn-secondary {
+    border: none;
+    color: rgba(224, 44, 109, 0.87);
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: #FFF;
+}
+
 main,
 header {
     max-width: 1280px;
@@ -95,7 +104,97 @@ header {
     color: #3A3A3A;
     font-weight: 600;
     font-size: 28px;
+    margin-bottom: 19px;
 }
+
+.popular-img {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin: 50px auto;
+}
+
+.popular-img-design img {
+    width: 100%;
+}
+
+.popular-img-design {
+    background-color: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.popular-img-design span {
+    color: #FB8200;
+}
+
+.popular-img-design h1 {
+    color: #18191F;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 40px;
+}
+
+.popular-img-design h4 {
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.btn-div {
+    display: flex;
+    justify-content: end;
+    margin: 50px 0;
+}
+
+.features {
+    display: flex;
+    align-items: center;
+    gap: 96px;
+}
+
+
+.features-des {
+    color: #6C6C6C;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px;
+    margin: 20px 0;
+    /* 175% */
+}
+
+footer {
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+    background-color: #0A0826;
+    text-align: center;
+    color: white;
+}
+
+.footer {
+
+    height: 200px;
+    margin-top: 133px;
+}
+
+.footer h2 {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.footer h4 {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 
 @media screen and (max-width:576px) {
     .nav {
@@ -123,6 +222,28 @@ header {
     .advertise {
         flex-wrap: wrap;
     }
+
+    .popular-img {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .features {
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+    }
+
+    .features img {
+        width: 100%;
+    }
+
+    .features-details {
+        text-align: center;
+    }
+
+    footer {
+        width: 100%;
+    }
 }
 
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -136,5 +257,22 @@ header {
 
     .advertise {
         flex-wrap: wrap;
+    }
+
+    .popular-img {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .features {
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+    }
+
+    .features img {
+        width: 100%;
+    }
+
+    .features-details {
+        text-align: center;
     }
 }
